# aoc2024

./: .gitignore  Cargo.toml  README.md
data/images/: day-24.dot
src/: main.rs
