[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Steven Lotito <steven.lotito@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

chrono = { version = "0.4.39", optional = true }
dhat = { version = "0.3.3", optional = true }
itertools = "0.14.0"
pico-args = "0.5.0"
tinyjson = "2.5.1"
regex = "1.11.1"
indexmap = "*"
memoize = "0.4.2"
glam = "0.29.2"
pathfinding = "4.13.0"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
pixels = "0.14.0"
bmp = "0.5.0"
rstest = "0.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
rayon = "1.10.0"
petgraph = "0.7.0"
miette = { version = "7.4", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
derive_more = { version = "1.0.0", features = ["display"] }
